# boltz-community

./: .gitignore  README.md  pyproject.toml
.github/workflows/: affinity-eval-tests.yml  gpu-tests.yml  manual-mps.yml  tests.yml
docs/: prediction.md
scripts/eval/: README.md  aggregate_boltz_eval.py  curate_dev_set.py  patch_cuequivariance.py  run_boltz_eval.py  setup_benchmark.sh
src/boltz/: __init__.py  main.py
src/boltz/data/: mol.py
tests/: benchmark.py  conftest.py  test_cli.py  test_inference_smoke.py  test_mps.py  test_regression.py  test_writer.py
tests/data/: test_featurizer_perf.py  test_getitem_retry.py  test_msa_trim.py  test_pad.py  test_types.py
tests/data/filter/: test_filters.py
tests/data/module/: test_inferencev2.py
tests/data/parse/: test_a3m.py  test_csv.py  test_mmcif_parser.py  test_schema.py
tests/data/write/: test_mmcif_writer.py  test_pdb_writer.py  test_write_utils.py
tests/model/: test_confidence_utils.py
tests/model/layers/: test_attention.py  test_dropout.py  test_initialize.py  test_pair_averaging.py  test_pairformer.py  test_transition.py  test_triangular_mult.py
tests/model/loss/: test_bfactor_loss.py  test_confidence_loss.py  test_diffusion_loss.py  test_distogram_loss.py
tests/model/modules/: test_parallel_sample_chunking.py
tests/model/potentials/: test_potentials.py  test_schedules.py
tools/affinity-eval/: README.md  pyproject.toml
tools/affinity-eval/src/affinity_eval/: __init__.py  cli.py  datasets.py  metrics.py  parsers.py
tools/affinity-eval/tests/: test_metrics.py  test_parsers.py
(+40 files in other folders)
