[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "affinity-eval"
version = "0.1.0"
requires-python = ">=3.10"
description = "Model-agnostic binding affinity prediction evaluation tool"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.10",
    "click>=8.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest", "matplotlib>=3.7"]

[project.scripts]
affinity-eval = "affinity_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
